# icewm

./: .clang-format  .cvsignore  .gitignore  AUTHORS  BUGS  CHANGES  CMakeLists.txt  CODE_OF_CONDUCT.md  COMPLIANCE  CONTRIBUTING.md  COPYING  ChangeLog  FAQ  INSTALL  INSTALL-cmakebuild.md  INSTALL.cmakebuild  Makefile  Makefile.am  Makefile.in  NEWS  PLATFORMS  README  README.icewm  README.md  README.md.in  README.wm-session  RELEASE.md  THANKS  TODO  TODO.wmspec  VERSION  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  config.cache  config.status  configure  configure.ac  configure.in  (+22 more)
doc/: .cvsignore  CMakeLists.txt  Doxyfile.in  Makefile  Makefile.am  icesound.1.adoc  icewm-1.html  icewm-10.html  icewm-11.html  icewm-12.html  icewm-13.html  icewm-14.html  icewm-15.html  icewm-16.html  icewm-2.html  icewm-3.html  icewm-4.html  icewm-5.html  icewm-6.html  icewm-7.html  icewm-8.html  icewm-9.html  icewm.1.adoc  icewm.1.man  icewm.adoc  icewm.html  icewm.man  icewm.md  icewm.sgml  icewmbg.1.adoc  techinfo.sgml
lib/: .cvsignore  CMakeLists.txt  IceWM.desktop  Makefile.am  icewm-session.desktop  icewm.desktop  keys  keys.in  menu  menu.in  programs.in  taskbar2  toolbar  toolbar.in  winoptions  winoptions.in
lib/icewm/: close.xpm  maximize.xpm  menu.xpm  restore.xpm  rolldown.xpm
lib/icons/: about_16x16.xpm  about_32x32.xpm  app_16x16.xpm  app_32x32.xpm  bomb_16x16.xpm  bomb_32x32.xpm  cancel-logout_16x16.xpm  communicator-abook_16x16.xpm  communicator-abook_32x32.xpm  communicator-browser_16x16.xpm  communicator-browser_32x32.xpm  communicator-composer_16x16.xpm  communicator-composer_32x32.xpm  communicator-discussion_16x16.xpm  communicator-discussion_32x32.xpm  communicator-mail_16x16.xpm  communicator-mail_32x32.xpm  emacs_16x16.xpm  emacs_32x32.xpm  file_16x16.xpm  file_32x32.xpm  focus_16x16.xpm  focus_32x32.xpm  folder_16x16.xpm  folder_32x32.xpm  fte_16x16.xpm  fte_32x32.xpm  gimp_16x16.xpm  gimp_32x32.xpm  gimp_hi_16x16.xpm  gimp_hi_32x32.xpm  gnome_16x16.xpm  help_16x16.xpm  help_32x32.xpm  hibernate_16x16.xpm  hibernate_32x32.xpm  java_16x16.xpm  java_32x32.xpm  kde_16x16.xpm  koules_16x16.xpm  (+40 more)
lib/ledclock/: a.xpm  colon.xpm  dot.xpm  m.xpm  n0.xpm  n1.xpm  n2.xpm  n3.xpm  n4.xpm  n5.xpm  n6.xpm  n7.xpm  n8.xpm  n9.xpm  p.xpm  percent.xpm  slash.xpm  space.xpm
lib/mailbox/: errmail.xpm  mail.xpm  newmail.xpm  nomail.xpm  unreadmail.xpm
lib/taskbar/: debian.xpm  icewm.xpm  linux.xpm  linux1.xpm  linux2.xpm  linux20.xpm  start.xpm  windows.xpm  xfreeos2.xpm
lib/themes/CrystalBlue/: close.xpm  (+69 more)
man/: .gitignore  CMakeLists.txt  Makefile.am  icehelp.pod  icesh.pod  icesound.pod  icewm-env.pod  icewm-focus_mode.pod  icewm-keys.pod  icewm-menu-fdo.pod  icewm-menu-gnome2.pod  icewm-menu-xrandr.pod  icewm-menu.pod  icewm-preferences.pod  icewm-prefoverride.pod  icewm-programs.pod  icewm-session.pod  icewm-set-gnomewm.pod  icewm-shutdown.pod  icewm-startup.pod  icewm-theme.pod  icewm-toolbar.pod  icewm-winoptions.pod  icewm.pod  icewmbg.pod  icewmhint.pod  icewmtray.pod
po/: .cvsignore  CMakeLists.txt  LINGUAS  Makefile  Makefile.in  Makevars  POTFILES.in  ar.po  ast.po  be.po  bg.po  ca.po  ca.pox  cs.po  da.po  de.po  de.pox  el.po  en.po  eo.po  es.po  es.pox  fa.po  fi.po  fi.pox  fr.po  fr.pox  he.po  hi.po  hr.po  hr.pox  hu.mo  hu.po  hu.pox  icewm.pot  id.po  ie.po  it.po  it.pox  ja.po  (+34 more)
src/: .clang-format  .cvsignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Makefile.os2  MwmUtil.h  WinMgr.h  aaddressbar.cc  aaddressbar.h  aapm.cc  aapm.h  aclock.cc  aclock.h  acpustatus.cc  acpustatus.h  akeyboard.cc  akeyboard.h  amailbox.cc  amailbox.h  amemstatus.cc  amemstatus.h  applet.cc  applet.h  appnames.h  apppstatus.cc  apppstatus.h  argument.h  ascii.h  atasks.cc  atasks.h  atray.cc  atray.h  aworkspaces.cc  aworkspaces.h  base.h  binascii.h  bindkey.cc  bindkey.h  (+260 more)
src/attic/: yimage_imlib.cc  yimage_xpm.cc  ylibrary.cc  ylibrary.h  ypixbuf.cc  yworker.cc  yworker.h
src/base/: base.mk  misc.cc  yaction.cc  yapp.cc  yatom.cc  ybutton.cc  ybuttonborder.cc  yconfig.cc  ycstring.cc  ydialog.cc  yevent.cc  yfilepath.cc  yicon.cc  yiconcache.cc  yimage.cc  yimageio.cc  yinput.cc  ykeybind.cc  ykeyevent.cc  ylabel.cc  ylistbox.cc  ymenu.cc  ymenuitem.cc  ymsgbox.cc  ypaint.cc  ypoint.cc  ypointer.cc  ypopup.cc  yrect.cc  yresource.cc  yscrollbar.cc  yscrollview.cc  ysocket.cc  ystyle.h  ytimer.cc  ytooltip.cc  ytopwindow.cc  ywindow.cc
src/dock/: aaddressbar.cc  aaddressbar.h  aapm.cc  aapm.h  aclock.cc  aclock.h  acpustatus.cc  acpustatus.h  amailbox.cc  amailbox.h  apppstatus.cc  apppstatus.h  atasks.cc  atasks.h  aworkspaces.cc  aworkspaces.h  browse.cc  browse.h  dock.mk  dockaction.cc  dockaction.h  gnome.cc  iceclock.cc  icecpu.cc  icedock.cc  iceroot.cc  obj.h  objbar.cc  objbar.h  objmenu.h  rootmenu.cc  rootmenu.h  themes.cc  themes.h  wmabout.cc  wmabout.h  wmdesktop.cc  wmdesktop.h  wmdialog.cc  wmdialog.h  (+8 more)
src/include/: MwmUtil.h  WinMgr.h  base.h  config.h  debug.h  default.h  deffonts.h  prefs.h  sysdep.h  yaction.h  yactionbutton.h  yapp.h  yatom.h  ybase.h  ybutton.h  ybuttonborder.h  ybuttonevent.h  yconfig.h  ycrossingevent.h  ycstring.h  ydialog.h  yevent.h  yfilepath.h  yfocusevent.h  yfull.h  yinputline.h  ykey.h  ykeybind.h  ykeyevent.h  ylabel.h  ylib.h  ylistbox.h  ymenu.h  ymenuitem.h  ymotionevent.h  ymsgbox.h  ypaint.h  ypoint.h  ypointer.h  ypopup.h  (+17 more)
src/root/: iceroot.cc  root.mk  rootmenu.cc  rootmenu.h
src/utils/: dndtest.cc  icehelp.cc  iceicon.cc  icelist.cc  icesame.cc  iceskt.cc  icesound.cc  iceview.cc  icewmbg.cc  icewmhint.cc  nop.cc  test_gravity.cc  testmwmhints.cc  testwinhints.cc  utils.mk  wmmark.cc
src/wm/: bindkey.h  decorate.cc  genpref.cc  movesize.cc  wm.mk  wmaction.cc  wmaction.h  wmapp.cc  wmapp.h  wmbutton.cc  wmbutton.h  wmclient.cc  wmclient.h  wmconfig.cc  wmconfig.h  wmcontainer.cc  wmcontainer.h  wmframe.cc  wmframe.h  wmmgr.cc  wmmgr.h  wmminiicon.cc  wmminiicon.h  wmoption.cc  wmoption.h  wmsession.cc  wmsession.h  wmstatus.cc  wmstatus.h  wmswitch.cc  wmswitch.h  wmtitle.cc  wmtitle.h
(+499 files in other folders)
